# github-actions-job-summary-test

./: CMakeLists.txt  README.md
.github/workflows/: build-ubuntu.yml  build-windows.yml  ci.yml  collect-and-report.yml  test-jon-summary.yml
include/: utils.h
scripts/: collect_errors.py  comment_template.md.j2  merge_and_post.py
src/: main.cpp  utils.cpp
tests/: test_utils.cpp
